[package]
name = "bust_util"
version = "0.1.0"
authors = ["Pyrit [2111649]"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_json = "1.0.82"
indoc = "1.0.6"
tinytemplate = "1.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
